base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fashora-frontend
  labels:
    app: fashora-frontend
    component: frontend
    managed-by: argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fashora-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fashora-frontend
        component: frontend
    spec:
      securityContext:
        runAsNonRoot: false     # Nginx needs root to bind port 80
      terminationGracePeriodSeconds: 30

      containers:
        - name: frontend
          image: yujjawalboss/fashora-frontend:v1  # patched by Kustomize
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds:       20
            failureThreshold:    3

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds:       10
            failureThreshold:    3

          resources:
            requests:
              cpu:    "50m"
              memory: "64Mi"
            limits:
              cpu:    "200m"
              memory: "128Mi"
