base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fashora-mysql-svc
spec:
  type:      ClusterIP
  clusterIP: None                        # headless for StatefulSet DNS
  selector:
    app: fashora-mysql
  ports:
    - port:       3306
      targetPort: 3306
